syntax = "proto3";

option csharp_namespace = "GoNomads.Shared.Grpc";

package product;

// Product Service gRPC definitions
service ProductService {
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc GetProductsByUserId (GetProductsByUserIdRequest) returns (ListProductsResponse);
}

// Messages
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string user_id = 5;
  string category = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string user_id = 4;
  string category = 5;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
}

message DeleteProductRequest {
  string id = 1;
}

message ProductResponse {
  Product product = 1;
  bool success = 2;
  string message = 3;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetProductsByUserIdRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
  bool success = 5;
  string message = 6;
}